# ZkHurdles

./: package-lock.json  pnpm-lock.yaml
app/: .env  index.html  package.json  pnpm-lock.yaml  vite.config.js
app/src/: App.tsx  index.css  index.tsx
app/src/api/: clientApi.ts
app/src/api/admin/: httpClient.ts  nodeApi.ts
app/src/api/admin/dataSource/: NodeDataSource.ts  NodeDataSourceV2.ts
app/src/api/dataSource/: ClientApiDataSource.ts
app/src/auth/: ed25519.ts  headers.ts
app/src/components/admin-login/applicationLogin/: AppLoginPopup.tsx
app/src/components/admin-login/wallets/: LoginSelector.tsx
app/src/components/starknet/: StarknetWallet.tsx
app/src/constants/: en.global.json
app/src/context/: ServerDownContext.tsx
app/src/hooks/: useStarknet.tsx
app/src/pages/admin/: Authenticate.tsx  Starknet.tsx
app/src/pages/letsplay/: index.tsx
app/src/pages/lobby/GameLobby/: ActionButton.tsx  BalanceCard.tsx  GameLobby.tsx  InfoCard.tsx  index.ts
app/src/pages/lobby/common/: LoadingSpinner.tsx
app/src/pages/login/: Authenticate.tsx
app/src/pages/setup/: index.tsx
app/src/utils/: bs58.ts  jwtHeaders.ts  starknet.ts  starknetWalletType.ts  storage.ts
cairo_contracts/: Scarb.toml  declare_contract.sh  deploy_contract.sh  notes.txt  snfoundry.toml
cairo_contracts/src/: lib.cairo
logic/: Cargo.toml
logic/res/: cts_pvp.wasm  zk_hurdles.wasm
logic/src/: lib.rs
